# grasshopper_riscv

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: clang-format.cmake
common_lib/: alloc.c  file_common.c
doc/: README.md  main.tex  references.bib
doc/include/: preambule.tex  title.tex
generation/: GenerateTables.c  KeyGeneration.py  README.md
include/: config.h  file_common.h  grasshoper.h
include/grasshopper/: grasshopper.h
include/utils/: bmp_header.h  config.h  file_common.h  vector_inst.h
lib/: CMakeLists.txt
lib/grasshopper/: CMakeLists.txt  grasshopper.c  tables.c
lib/utils/: CMakeLists.txt  alloc.c  bmp_header.c  file_common.c
python/: README.md  config.json  main.py
source_linear/: grasshoper.c  main.c
tools/: CMakeLists.txt  main.c
tools/simple/: CMakeLists.txt  grasshopper.c  main.c  simple.c
tools/vectorized/: CMakeLists.txt  README.md  grasshopper.c  main.c  vectorized.c
